--- a/Frantic/MainPage.xaml
+++ b/Frantic/MainPage.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <SplitView x:Name="MyPane" DisplayMode="Overlay" PanePlacement="Right" Background="Transparent">
             <SplitView.Pane>
-                <StackPanel Padding="20,15,0,0" Background="#DC572E">
+                <StackPanel Padding="20,15,0,0" Background="#008299">
                     <TextBlock Text="Панель навигации" FontSize="22" VerticalAlignment="Stretch"/>
                     <Button Content="Музыка" Tag="tracks" Click="NavButton_Click" Foreground="White" HorizontalAlignment="Left" FontSize="18" Background="Transparent" BorderThickness="0" Padding="8" Margin="15,15,0,0"/>
                     <Button Content="Видео" Tag="video" Click="NavButton_Click" Foreground="White" HorizontalAlignment="Left" FontSize="18" Background="Transparent" BorderThickness="0" Padding="8" Margin="15,0,0,0"/>
