--- a/Frantic/tracks.xaml
+++ b/Frantic/tracks.xaml
@@ -27,21 +27,21 @@
             </PivotItem>
         </Pivot>
 
-        <MediaPlayerElement x:Name="mediaPlayer" AutoPlay="False" Visibility="Collapsed"/>
+        <MediaPlayerElement x:Name="mediaPlayer" AutoPlay="False" Visibility="Collapsed" />
 
         <Grid x:Name="MiniPlayerPanel"
-      VerticalAlignment="Bottom"
-      Background="#222"
-      Height="60"
-      Visibility="Collapsed"
-      Tapped="PlayerPanel_Tapped">
+          VerticalAlignment="Bottom"
+          Background="#222"
+          Height="60"
+          Visibility="Collapsed">
 
             <Button x:Name="OpenPlayerButton"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Stretch"
-            Background="Transparent"
-            BorderThickness="0"
-            Click="OpenPlayerButton_Click">
+                HorizontalAlignment="Left"
+                VerticalAlignment="Stretch"
+                Background="Transparent"
+                BorderThickness="0"
+                Width="250"
+                Click="OpenPlayerButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="12,0">
                     <Image x:Name="MiniAlbumArt" Width="40" Height="40" Stretch="UniformToFill"/>
                     <StackPanel Margin="10,0,0,0" VerticalAlignment="Center">
@@ -52,27 +52,39 @@
             </Button>
 
             <Button x:Name="MiniPlayButton"
-            Content="▶"
-            FontSize="18"
-            Width="40"
-            Height="40"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Center"
-            Margin="0,0,16,0"
-            Background="Transparent"
-            Foreground="White"
-            Click="MiniPlayButton_Click"/>
+                Content="▶"
+                FontSize="18"
+                Width="40"
+                Height="40"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Margin="0,0,16,0"
+                Background="Transparent"
+                Foreground="White"
+                Click="MiniPlayButton_Click"/>
         </Grid>
 
         <Grid x:Name="FullPlayerPanel"
           Background="Black"
-          Visibility="Collapsed" HorizontalAlignment="Stretch" Margin="1,0,-1,0" VerticalAlignment="Stretch">
+          Visibility="Collapsed">
+
             <Image x:Name="FullAlbumArt"
                Width="250"
                Height="250"
                HorizontalAlignment="Center"
                VerticalAlignment="Top"
                Margin="0,100,0,0"/>
+            <Button x:Name="BackButton"
+            Content="←"
+            FontSize="24"
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Margin="16,60,0,0"
+            Background="Transparent"
+            Foreground="White"
+            Click="BackButton_Click"/>
             <TextBlock x:Name="FullTrackTitle"
                    Foreground="White"
                    FontSize="24"
@@ -81,6 +93,7 @@
                    Margin="0,370,0,0"
                    MaxWidth="300"
                    TextWrapping="Wrap"/>
+
             <TextBlock x:Name="FullTrackArtist"
                    Foreground="Gray"
                    FontSize="18"
@@ -89,6 +102,19 @@
                    Margin="0,410,0,0"
                    MaxWidth="300"
                    TextWrapping="Wrap"/>
+
+            <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Margin="0,460,0,0">
+                <TextBlock x:Name="CurrentTimeText" Text="0:00" Foreground="White" Margin="0,0,10,0"/>
+                <Slider x:Name="ProgressSlider"
+                    Width="200"
+                    Height="30"
+                    Foreground="White"
+                    ValueChanged="ProgressSlider_ValueChanged"/>
+                <TextBlock x:Name="TotalTimeText" Text="0:00" Foreground="White" Margin="10,0,0,0"/>
+            </StackPanel>
 
             <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Center"
