--- a/Frantic/MainLibraryPage.xaml
+++ b/Frantic/MainLibraryPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Frantic.tracks"
+    x:Class="Frantic.MainLibraryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Frantic"
@@ -26,9 +26,6 @@
                 <ListView x:Name="ArtistsList" ItemClick="Artist_ItemClick" IsItemClickEnabled="True" />
             </PivotItem>
         </Pivot>
-
-        <MediaPlayerElement x:Name="mediaPlayer" AutoPlay="False" Visibility="Collapsed" />
-
         <Grid x:Name="MiniPlayerPanel"
           VerticalAlignment="Bottom"
           Background="#222"
@@ -62,68 +59,6 @@
                 Background="Transparent"
                 Foreground="White"
                 Click="MiniPlayButton_Click"/>
-        </Grid>
-
-        <Grid x:Name="FullPlayerPanel"
-          Background="Black"
-          Visibility="Collapsed">
-
-            <Image x:Name="FullAlbumArt"
-               Width="250"
-               Height="250"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Top"
-               Margin="0,100,0,0"/>
-            <Button x:Name="BackButton"
-            Content="←"
-            FontSize="24"
-            Width="50"
-            Height="50"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Margin="16,60,0,0"
-            Background="Transparent"
-            Foreground="White"
-            Click="BackButton_Click"/>
-            <TextBlock x:Name="FullTrackTitle"
-                   Foreground="White"
-                   FontSize="24"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Top"
-                   Margin="0,370,0,0"
-                   MaxWidth="300"
-                   TextWrapping="Wrap"/>
-
-            <TextBlock x:Name="FullTrackArtist"
-                   Foreground="Gray"
-                   FontSize="18"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Top"
-                   Margin="0,410,0,0"
-                   MaxWidth="300"
-                   TextWrapping="Wrap"/>
-
-            <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Margin="0,460,0,0">
-                <TextBlock x:Name="CurrentTimeText" Text="0:00" Foreground="White" Margin="0,0,10,0"/>
-                <Slider x:Name="ProgressSlider"
-                    Width="200"
-                    Height="30"
-                    Foreground="White"
-                    ValueChanged="ProgressSlider_ValueChanged"/>
-                <TextBlock x:Name="TotalTimeText" Text="0:00" Foreground="White" Margin="10,0,0,0"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Bottom"
-                    Margin="0,0,0,100">
-                <Button Content="⏮" Tag="Prev" Click="MediaButton_Click" Background="Transparent" Foreground="White" FontSize="24" Margin="0,0,20,0"/>
-                <Button x:Name="FullPlayButton" Content="⏸" Tag="PlayPause" Click="MediaButton_Click" Background="Transparent" Foreground="White" FontSize="24"/>
-                <Button Content="⏭" Tag="Next" Click="MediaButton_Click" Background="Transparent" Foreground="White" FontSize="24" Margin="20,0,0,0"/>
-            </StackPanel>
         </Grid>
     </Grid>
 </Page>
